# Hi-Paris-Research-Finder

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml  requirements.txt  search.py  utils.py
.streamlit/: config.toml
backend/: exact_matching.py  semantic_search.py
data/: Hi_Paris_affiliated_professors.xlsx  prof_ecosystem_01_21.xlsx  professor_profile_28_01.xlsx  ~$Hi_Paris_affiliated_professors.xlsx
frontend/: app.py
